# semigroup-exercise

./: CHANGELOG.md  README.md  semigroup-exercise.cabal
app/: BoolConj.hs  BoolDisj.hs  Combine.hs  Comp.hs  Four.hs  Identity.hs  Main.hs  Mem.hs  Or.hs  Pair.hs  Three.hs  Trivial.hs  Two.hs  Validation.hs
