cabal-version:      2.4
name:               semigroup-exercise
version:            0.1.0.0
author:             Vincent
maintainer:         vpark45@gmail.com
extra-source-files: CHANGELOG.md
                    README.md

executable semigroup-exercise
  main-is:          Main.hs
  build-depends:    base ^>=4.12.0.0
                  , QuickCheck
  other-modules:    Trivial
                  , Identity
                  , Two
                  , Three
                  , Four
                  , BoolConj
                  , BoolDisj
                  , Or
                  , Combine
  hs-source-dirs:   app
  default-language: Haskell2010
